applied waiter auth in PaceNewOrder
